<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_attack_screen_001"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.stickm.PlayerAttack" >

    <ImageView
        android:id="@+id/imageViewCurrentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAttkOK"
        android:layout_alignLeft="@+id/textViewHealthAttkScreen"
        android:layout_below="@+id/textViewCurrentPlayer"
        android:layout_toLeftOf="@+id/linearLayout2"
        android:background="@drawable/character006"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/btnAttkOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:height="@dimen/attk_screen_btn_ok"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="OK"
        android:width="@dimen/attk_screen_btn_ok" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAttkOK"
        android:layout_alignLeft="@+id/btnAttkOK"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewDef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/defString"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnDefHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="H"
            android:width="@dimen/attk_screen_btn_width" />

        <Button
            android:id="@+id/btnDefMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="M"
            android:width="@dimen/attk_screen_btn_width" />

        <Button
            android:id="@+id/btnDefLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="L"
            android:width="@dimen/attk_screen_btn_width" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAttk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/attkString"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnAttkHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="H"
            android:width="@dimen/attk_screen_btn_width" />

        <Button
            android:id="@+id/btnAttkMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="M"
            android:width="@dimen/attk_screen_btn_width" />

        <Button
            android:id="@+id/relativeLayoutCharacterScreenHelpScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:height="@dimen/attk_screen_btn_hieght"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="L"
            android:width="@dimen/attk_screen_btn_width" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCurrentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewCurrentPlayer"
        android:layout_below="@+id/progressBarHealthBar"
        android:text="@string/player_placeholder"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewHealthAttkScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="TextView"
        android:textColor="#ffffff" />

    <ProgressBar
        android:id="@+id/progressBarHealthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewCurrentPlayer"
        android:layout_alignRight="@+id/linearLayout4"
        android:layout_below="@+id/textViewHealthAttkScreen"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/progress_bar" />

    <Button
        android:id="@+id/btnAttkHelp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="\?" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageViewCurrentPlayer"
        android:layout_alignTop="@+id/btnAttkOK"
        android:layout_toRightOf="@+id/btnAttkHelp"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewStance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stanceString"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/btnStnDef"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".33"
                android:background="@drawable/btn"
                android:height="@dimen/attk_screen_stance_hieght"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="D"
                android:width="@dimen/attk_screen_stance_width" />

            <Button
                android:id="@+id/btnStnN"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".33"
                android:background="@drawable/btn"
                android:height="@dimen/attk_screen_stance_hieght"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="N"
                android:width="@dimen/attk_screen_stance_width" />

            <Button
                android:id="@+id/btnStnAgg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".33"
                android:background="@drawable/btn"
                android:height="@dimen/attk_screen_stance_hieght"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="A"
                android:width="@dimen/attk_screen_stance_width" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutAttkScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#cc000005"
        android:visibility="invisible" >

        <Button
            android:id="@+id/btnAttkCloseHelp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="X" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnAttkCloseHelp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/help_title"
            android:textColor="#ffffff"
            android:textSize="40sp" />
    </RelativeLayout>

</RelativeLayout>